<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/ic_nav_account" />
        <item
            android:id="@+id/nav_public_tasks"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/ic_menu_public_tasks" />
        <item
            android:id="@+id/nav_own_tasks"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/ic_menu_own_tasks" />
        <item
            android:id="@+id/nav_assigned_tasks"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/ic_menu_assigned_tasks" />
        <item android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/ic_nav_account"/>
        <item android:id="@+id/nav_createtask"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/ic_nav_createtask"/>
    </group>
</menu>