<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="no.ntnu.mobapp20g6.app1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="no.ntnu.mobapp20g6.app1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="no.ntnu.mobapp20g6.app1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_login"
        android:name="no.ntnu.mobapp20g6.app1.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_account"
        android:name="no.ntnu.mobapp20g6.app1.ui.account.UserAccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_useraccount" >
        <action
            android:id="@+id/action_nav_account_to_nav_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_nav_account_self"
            app:destination="@id/nav_account" />
    </fragment>
    <fragment
        android:id="@+id/nav_public_tasks"
        android:name="no.ntnu.mobapp20g6.app1.ui.tasklist.TaskListFragment"
        android:label="Public Tasks"
        tools:layout="@layout/task_list_fragment" >
        <action
            android:id="@+id/action_nav_public_tasks_to_nav_task"
            app:destination="@id/nav_task" />
    </fragment>
    <fragment
        android:id="@+id/nav_own_tasks"
        android:name="no.ntnu.mobapp20g6.app1.ui.tasklist.TaskListFragment"
        android:label="Own Tasks"
        tools:layout="@layout/task_list_fragment" >
        <action
            android:id="@+id/action_nav_own_tasks_to_nav_task"
            app:destination="@id/nav_task" />
    </fragment>
    <fragment
        android:id="@+id/nav_assigned_tasks"
        android:name="no.ntnu.mobapp20g6.app1.ui.tasklist.TaskListFragment"
        android:label="Assigned Tasks"
        tools:layout="@layout/task_list_fragment" >
        <action
            android:id="@+id/action_nav_assigned_tasks_to_nav_task"
            app:destination="@id/nav_task" />
    </fragment>
    <fragment
        android:id="@+id/nav_task"
        android:name="no.ntnu.mobapp20g6.app1.ui.task.TaskFragment"
        android:label="Tasks"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_nav_task_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_task_to_nav_full_screen_map"
            app:destination="@id/nav_full_screen_map" />
    </fragment>
    <fragment
        android:id="@+id/nav_full_screen_map"
        android:name="no.ntnu.mobapp20g6.app1.ui.task.MapFragment"
        android:label="@string/full_screen_map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/nav_group"
        android:label="Create Group"
        android:name="no.ntnu.mobapp20g6.app1.ui.group.CreateGroupFragment">
        <action
            android:id="@+id/action_nav_group_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>