<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:padding="8dp"
    tools:context=".ui.group.CreateGroupFragment">

    <ScrollView
        android:id="@+id/create_group_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/create_group_scroll_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/create_group_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/design_default_color_on_secondary">

                <TextView
                    android:id="@+id/create_group_details_step_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@android:color/holo_blue_dark"
                    android:paddingHorizontal="16dp"
                    android:text="@string/create_group_details_step_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/create_group_details_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/create_group_details_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/create_group_details_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/create_group_details_step_1"
                    app:layout_constraintTop_toTopOf="@id/create_group_details" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/create_group_details_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_group_details_text">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.07" />

                    <EditText
                        android:id="@+id/create_group_details_input_orgid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ems="7"
                        android:hint="@string/create_group_details_orgid_input_hint"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toStartOf="@+id/create_group_details_input_btn_brreg"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/create_group_details_input_btn_brreg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/create_group_details_btn_brreg_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/create_group_details_input_orgid"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/create_group_details_name_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="15"
                        android:hint="@string/create_group_details_name_input_hint"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textAlignment="viewStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@+id/create_group_details_input_orgid" />

                    <EditText
                        android:id="@+id/create_group_details_desc_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="15"
                        android:gravity="top"
                        android:hint="@string/create_group_details_desc_input_hint"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@+id/create_group_details_name_input" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/create_group_extras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/design_default_color_on_secondary">

                <TextView
                    android:id="@+id/create_group_extras_step2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@android:color/holo_green_dark"
                    android:paddingHorizontal="16dp"
                    android:text="@string/create_group_extras_step_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/create_group_extras_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/create_group_extras_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/create_group_extras_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/create_group_extras_step2"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/create_group_extras_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_group_extras_text">

                    <Button
                        android:id="@+id/create_group_extras_input_btn_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_group_extras_input_btn_location"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/create_group_extras_btn_remove_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/design_default_color_error"
                        android:text="@string/create_group_extras_input_btn_remove_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/create_group_extras_input_btn_location" />

                    <Button
                        android:id="@+id/create_group_extras_btn_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_group_extras_input_btn_picture"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/create_group_extras_btn_remove_location" />

                    <ImageView
                        android:id="@+id/create_group_extras_preview_picture"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/create_group_extras_input_picture_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/create_group_extras_btn_picture"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <Button
                        android:id="@+id/create_group_extras_btn_remove_picture"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/design_default_color_error"
                        android:text="@string/create_group_extras_input_btn_remove_picture"
                        app:layout_constraintEnd_toEndOf="@+id/create_group_extras_preview_picture"
                        app:layout_constraintStart_toStartOf="@+id/create_group_extras_preview_picture"
                        app:layout_constraintTop_toBottomOf="@+id/create_group_extras_preview_picture" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/createtask_extras_group_remove_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:constraint_referenced_ids="create_group_extras_btn_remove_picture,create_group_extras_preview_picture"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/create_group_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/design_default_color_on_secondary">

                <TextView
                    android:id="@+id/create_group_confirmation_step_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@android:color/holo_purple"
                    android:paddingHorizontal="16dp"
                    android:text="@string/create_group_confirmation_step_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/create_group_confirmation_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/create_group_confirmation_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/create_group_confirmation_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/create_group_confirmation_step_3"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/create_group_confirmation_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_group_confirmation_text">


                    <Button
                        android:id="@+id/create_group_confirmation_input_btn_create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/holo_green_dark"
                        android:text="@string/create_group_confirmation_input_btn_create"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/create_group_confirmation_input_btn_cancel" />

                    <Button
                        android:id="@+id/create_group_confirmation_input_btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/design_default_color_error"
                        android:text="@string/cancel_button_text"
                        app:layout_constraintBottom_toBottomOf="@+id/create_group_confirmation_input_btn_create"
                        app:layout_constraintEnd_toStartOf="@+id/create_group_confirmation_input_btn_create"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/create_group_confirmation_input_btn_create" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
